# zehd

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  example.z
crates/zehd-cli/: Cargo.toml
crates/zehd-cli/src/: cli.rs  config.rs  main.rs  templates.rs
crates/zehd-cli/src/commands/: ast.rs  bytecode.rs  check.rs  dev.rs  mod.rs  new.rs  routes.rs  run.rs  tokens.rs
crates/zehd-cli/templates/: main.z.tmpl  zehd.toml.tmpl
crates/zehd-cli/templates/routes/: index.z.tmpl
crates/zehd-codex/: Cargo.toml
crates/zehd-codex/src/: ast.rs  error.rs  expr.rs  lib.rs  parser.rs  precedence.rs
crates/zehd-codex/tests/: attributes.rs  errors.rs  expressions.rs  functions.rs  generics.rs  helpers.rs  http_blocks.rs  imports.rs  integration.rs  interpolation.rs  match_expr.rs  statements.rs  types.rs  variables.rs
crates/zehd-lsp/: Cargo.toml
crates/zehd-lsp/src/: backend.rs  completion.rs  config.rs  diagnostics.rs  hover.rs  lib.rs  modules.rs
crates/zehd-rune/: Cargo.toml
crates/zehd-rune/src/: chunk.rs  compiler.rs  error.rs  lib.rs  module.rs  op.rs  registry.rs  value.rs
crates/zehd-rune/tests/: arithmetic.rs  control_flow.rs  data.rs  functions.rs  helpers.rs  http_handlers.rs  integration.rs  literals.rs  match_expr.rs  strings.rs  variables.rs
crates/zehd-server/: Cargo.toml
crates/zehd-server/src/: compile.rs  config.rs  discover.rs  error.rs  handler.rs  json.rs  lib.rs  router.rs  std_lib.rs  watcher.rs
crates/zehd-sigil/: Cargo.toml
crates/zehd-sigil/src/: builtin_methods.rs  checker.rs  error.rs  infer.rs  lib.rs  optimize.rs  resolve.rs  scope.rs  types.rs
crates/zehd-sigil/tests/: checking.rs  errors.rs  generics.rs  helpers.rs  inference.rs  integration.rs  optimize.rs  option_result.rs  resolve.rs
crates/zehd-tome/: Cargo.toml
crates/zehd-tome/src/: cursor.rs  error.rs  lexer.rs  lib.rs  token.rs
crates/zehd-tome/tests/: comments.rs  edge_cases.rs  errors.rs  helpers.rs  identifiers.rs  integration.rs  interpolation.rs  keywords.rs  literals.rs  operators.rs  spans.rs
crates/zehd-ward/: Cargo.toml
crates/zehd-ward/src/: error.rs  frame.rs  lib.rs  methods.rs  vm.rs
crates/zehd-ward/tests/: arithmetic.rs  comparison.rs  control_flow.rs  data_structures.rs  di.rs  functions.rs  helpers.rs  integration.rs  literals.rs  methods.rs  option_result.rs  strings.rs  variables.rs
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: zehd.tmLanguage.json
scripts/: dev-project.sh  install.sh
