[package]
name = "zehd-rune"
version = "0.1.0"
edition = "2021"
description = "Bytecode compiler for the zehd language"

[dependencies]
zehd-tome = { path = "../zehd-tome" }
zehd-codex = { path = "../zehd-codex" }
zehd-sigil = { path = "../zehd-sigil" }

[dev-dependencies]
zehd-tome = { path = "../zehd-tome" }
zehd-codex = { path = "../zehd-codex" }
zehd-sigil = { path = "../zehd-sigil" }
